--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "@syncfusion/ej2-angular-maps": "^19.1.66",
+    "angular-highcharts": "^12.0.0",
+    "highcharts": "^9.1.1",
+    "highcharts-angular": "^2.10.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
